# Neural_Network_c-

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  config.h  cvl_loader.h  flatten.h  greedly_decode.h  image_loader.h  layer.h  main.cpp  mnist_loader.h  nn.h  softmax_ce.h  softmax_ce_ctc.h
FC_Layer/: fc_layer.cpp  fc_layer.h
MaxPool/: max_pool.cpp  max_pool.h
Pooling/: pooling.cpp  pooling.h
ReLu/: relu.cpp  relu.h
conv2d/: conv2d.cpp  conv2d.h
